# Heart

./: '  .gitignore  .gitmodules  CMakeLists.txt  README.md
Heart/: CMakeLists.txt  HeartConfig.cmake.in  htpch.h
Heart/lib/: Flourish
Heart/lib/Glad/: CMakeLists.txt
Heart/lib/Glad/src/: glad.c
Heart/lib/stb_image/: stb_image.cpp
Heart/lib/tinyfd/: tinyfiledialogs.h
Heart/lib/utf-cpp/: SOURCE.txt
Heart/resources/: BRDFQuad.vert  BRDFTexture.hetex  Bloom.vert  BloomBuffer.glsl  BloomComposite.frag  BloomHorizontal.frag  BloomHorizontalDoubleUpscale.frag  BloomHorizontalUpscale.frag  BloomVertical.frag  BloomVerticalComposite.frag  CalcBRDF.frag  CalcEnvironmentMap.frag  CalcIrradianceMap.frag  CalcPrefilterMap.frag  ComputeBloomDownsample.comp  ComputeBloomUpsample.comp  Cubemap.vert  CubemapBuffer.glsl  DebugLine.frag  DebugLine.vert  DefaultCube.gltf  DefaultEnvironmentMap.hdr  DefaultMaterial.hemat  Downsample.frag  EnvironmentMap.frag  EnvironmentMap.vert  FinalComposite.comp  FrameBuffer.glsl  FullscreenTriangle.vert  GaussianBlur.glsl  GaussianBlurHorizontal.frag  GaussianBlurVertical.frag  Grid.vert  IndirectCull.comp  IrradianceMap.frag  ObjectBuffer.glsl  PBR.frag  PBR.glsl  PBR.vert  PBRTransparentColor.frag  (+7 more)
Heart/resources/render_plugins/bloom/: BloomData.glsl  Common.glsl  Composite.comp  Composite.frag  Downsample.comp  Upsample.comp
Heart/resources/render_plugins/clustered_lighting/: Build.comp  ClusterBuffer.glsl  Common.glsl  Cull.comp
Heart/resources/render_plugins/collect_materials/: MaterialBuffer.glsl
Heart/resources/render_plugins/color_grading/: Composite.comp  Composite.frag
Heart/resources/render_plugins/compute_material_batches/: MaterialBuffer.glsl  ObjectBuffer.glsl
Heart/resources/render_plugins/compute_mesh_batches/: ObjectBuffer.glsl
Heart/resources/render_plugins/forward/: Common.glsl  PostProcess.frag  Standard.frag  Text.frag  Vertex.vert
Heart/resources/render_plugins/frame_data/: FrameBuffer.glsl
Heart/resources/render_plugins/gbuffer/: Common.glsl  Fragment.frag  Standard.frag  Text.frag  Util.glsl  Vertex.vert
Heart/resources/render_plugins/infinite_grid/: Fragment.frag  Vertex.vert
Heart/resources/render_plugins/lighting_data/: LightingBuffer.glsl
Heart/resources/render_plugins/pbr_composite/: Composite.comp
Heart/resources/render_plugins/render_environment_map/: Fragment.frag  Vertex.vert
Heart/resources/render_plugins/render_material_batches/: Fragment.frag  Opaque.frag  PBR.glsl  PBRConfigBuffer.glsl  Text.frag  Transparent.frag  Vertex.vert
Heart/resources/render_plugins/render_mesh_batches/: Normals.frag  Vertex.vert
Heart/resources/render_plugins/rtx/: Common.glsl  Hit.rchit  Miss.rmiss  PBR.glsl  PBR2.glsl  RayGen.rgen
Heart/resources/render_plugins/splat/: ComputeKeys.comp  ObjectBuffer.glsl  RadixSort.comp  RadixSortHistogram.comp  Splat.frag  Splat.vert
Heart/resources/render_plugins/ssao/: Compute.comp  Fragment.frag
Heart/resources/render_plugins/transparency_composite/: Fragment.frag  Util.glsl
Heart/resources/render_plugins/util/: BRDF.glsl  Colormap.glsl  Constants.glsl  Halton.glsl  Lighting.glsl  Misc.glsl  PBR.glsl
Heart/scripts/: configure-hostfxr.py
Heart/src/: hepch.cpp  hepch.h
Heart/src/Heart/Asset/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  FontAsset.cpp  FontAsset.h  MaterialAsset.cpp  MaterialAsset.h  MeshAsset.cpp  MeshAsset.h  SceneAsset.cpp  SceneAsset.h  ShaderAsset.cpp  ShaderAsset.h  SplatAsset.cpp  SplatAsset.h  TextureAsset.cpp  TextureAsset.h
Heart/src/Heart/Container/: Container.hpp  HArray.cpp  HArray.h  HArray.hpp  HString.cpp  HString.h  HString16.cpp  HString16.h  HString8.cpp  HString8.h  (+4 more)
HeartEditor/: CMakeLists.txt  imgui.ini  material0.hemat
HeartEditor/assets/shaders/: color.frag  composite.frag  fulltriangle.vert  main.frag  main.vert  post.frag  post.vert
HeartEditor/src/HeartEditor/: AssetPicker.cpp  AssetPicker.h  Editor.cpp  Editor.h  EditorApp.cpp  EditorApp.h  EditorCamera.cpp  EditorCamera.h  EditorLayer.cpp  EditorLayer.h  EntryPoint.cpp  HeartEditor.cpp  HeartEditor.h  MenuBar.cpp  MenuBar.h  Picker.cpp  Picker.h  Project.cpp  Project.h  ProjectPicker.cpp  ProjectPicker.h  ScriptPicker.cpp  ScriptPicker.h  StartupLayer.cpp  StartupLayer.h  StatusBar.cpp  StatusBar.h  Toolbar.cpp  Toolbar.h
HeartEditor/templates/: ${PROJECT_NAME}.csproj  ${PROJECT_NAME}.sln  BuildScripts.bat  BuildScripts.sh  EmptyEntity.csfile  ProjectTemplate.csproj  ProjectTemplate.sln  imgui.ini
HeartEditor/templates/.heart/: BuildScripts.bat  PublishScripts.bat  PublishScripts.sh
HeartRuntime/: .gitignore  CMakeLists.txt  android.toolchain.cmake  build.gradle  settings.gradle
HeartRuntime/app/: build.gradle
HeartRuntime/scripts/: BuildRelease.bat  ConfigureDebugAndroid.bat  ConfigureDebugLocal.bat  ConfigureReleaseAndroid.bat
HeartRuntime/src/HeartRuntime/: DevPanel.cpp  DevPanel.h  EntryPoint.cpp  RuntimeApp.cpp  RuntimeApp.h  RuntimeLayer.cpp  RuntimeLayer.h  Viewport.cpp  Viewport.h
HeartScripting/: .gitignore  AddNugetPackageSource.ps1  CMakeLists.txt  ClearNugetCache.sh  CoreScripts.csproj  CoreScripts.sln  CreateNugetPackage.ps1  CreateNugetPackage.sh  Heart.NET.Sdk.0.0.1.nupkg  Heart.NET.Sdk.0.0.2.nupkg  Heart.NET.Sdk.1.0.0.nupkg  HeartScripting.sln
HeartScripting/BridgeScripts/: BridgeScripts.csproj
HeartScripting/CoreScripts/: CoreScripts.csproj
HeartScripting/Heart.NET.Sdk/: Heart.NET.Sdk.csproj  Heart.NET.Sdk.nuspec
HeartScripting/Heart.NET.Sdk/Sdk/: Sdk.props
HeartScripting/Heart.NET.Sdk/docs/: README.md
HeartScripting/SourceGenerators/: SourceGenerators.csproj
HeartScripting/SourceGenerators/src/: ClassFinder.cs  ComponentsGenerator.cs  EntitiesGenerator.cs  ExtensionMethods.cs  ScriptFieldsGenerator.cs  UnmanagedCallbacksGenerator.cs  Util.cs
HeartScripting/scripts/: build-dotnet.py  publish-dotnet.py
HeartScripting/src/Core/: Log.cs
HeartScripting/src/Heart/: Class1.cs  EntryPoint.cs
HeartTesting/: CMakeLists.txt
HeartTesting/src/HeartTesting/: DataStruct.hpp  EntryPoint.cpp  TestHVector.hpp
(+431 files in other folders)
